force-app/main/default/objects/dh_superclone__CloneField__c/dh_superclone__CloneField__c.object-meta.xml
<CustomObject>
    <label>Clone Field</label>
    <nameField>
        <label>Clone Field</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Clone Fields</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>