force-app/main/default/objects/dh_superclone__CloneField__c/fields/dh_superclone__Action__c.field-meta.xml
<CustomField>
    <fullName>dh_superclone__Action__c</fullName>
    <label>Action</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>CLONE</fullName>
                <default>true</default>
                <label>CLONE</label>
            </value>
            <value>
                <fullName>VALUE</fullName>
            </value>
            <value>
                <fullName>NULL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>