force-app/main/default/objects/dh_superclone__CloneField__c/fields/dh_superclone__CloneObject__c.field-meta.xml
<CustomField>
    <fullName>dh_superclone__CloneObject__c</fullName>
    <label>Clone Object</label>
    <referenceTo>dh_superclone__CloneObject__c</referenceTo>
    <relationshipLabel>Object Fields</relationshipLabel>
    <relationshipName>CloneFields</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>