force-app/main/default/objects/dh_superclone__CloneField__c/fields/dh_superclone__Edit__c.field-meta.xml
<CustomField>
    <fullName>dh_superclone__Edit__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>The field will be editable when checked.</inlineHelpText>
    <label>Edit</label>
    <type>Checkbox</type>
</CustomField>