force-app/main/default/objects/dh_superclone__CloneField__c/fields/dh_superclone__Order__c.field-meta.xml
<CustomField>
    <fullName>dh_superclone__Order__c</fullName>
    <label>Display Order</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>