force-app/main/default/objects/dh_superclone__CloneField__c/fields/dh_superclone__Show__c.field-meta.xml
<CustomField>
    <fullName>dh_superclone__Show__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Show on the clone page.</description>
    <label>Show</label>
    <type>Checkbox</type>
</CustomField>