force-app/main/default/objects/dh_superclone__CloneField__c/fields/dh_superclone__Value__c.field-meta.xml
<CustomField>
    <fullName>dh_superclone__Value__c</fullName>
    <label>Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>