force-app/main/default/objects/dh_superclone__CloneField__c/listViews/dh_superclone__All.listView-meta.xml
<ListView>
    <fullName>dh_superclone__All</fullName>
    <columns>dh_superclone__CloneObject__c</columns>
    <columns>OBJECT_ID</columns>
    <columns>NAME</columns>
    <columns>dh_superclone__Action__c</columns>
    <columns>dh_superclone__Value__c</columns>
    <columns>dh_superclone__Show__c</columns>
    <columns>dh_superclone__Edit__c</columns>
    <columns>dh_superclone__Order__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>